--- a/package.json
+++ b/package.json
@@ -18,11 +18,17 @@
     "@angular/core": "^13.0.1",
     "@angular/forms": "^13.0.1",
     "@angular/localize": "^13.0.1",
+    "@angular/material": "^13.0.1",
     "@angular/platform-browser": "^13.0.1",
     "@angular/platform-browser-dynamic": "^13.0.1",
     "@angular/platform-server": "^13.0.1",
     "@angular/router": "^13.0.1",
     "@auth0/angular-jwt": "^5.0.2",
+    "@fortawesome/angular-fontawesome": "^0.11.1",
+    "@fortawesome/fontawesome-svg-core": "^6.2.0",
+    "@fortawesome/free-brands-svg-icons": "^6.2.0",
+    "@fortawesome/free-regular-svg-icons": "^6.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.2.0",
     "@ng-bootstrap/ng-bootstrap": "12.0.0-beta.4",
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
@@ -34,6 +40,7 @@
     "bootstrap-icons": "^1.7.0",
     "chart.js": "^2.8.0",
     "chartjs-color": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "ng-apexcharts": "^1.5.6",
     "ng2-charts": "^2.4.2",
     "ngx-perfect-scrollbar": "^9.0.0",
