--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,8 @@
             ],
             "styles": [
               "src/assets/scss/style.scss",
-              "src/styles.scss",
-              "node_module/sweetalert2/src/sweetalert2.scss"
+              "src/styles.scss"
+
             ],
             "scripts": []
           },
