--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "@angular/cli": "^13.0.2",
     "@angular/compiler-cli": "^13.0.1",
     "@angular/language-service": "^13.0.1",
+    "@types/bootstrap": "^5.2.6",
     "@types/c3": "^0.6.4",
     "@types/chartist": "^0.9.47",
     "@types/datatables.net": "^1.10.18",
