--- a/angular.json
+++ b/angular.json
@@ -32,8 +32,8 @@
             ],
             "styles": [
               "src/assets/scss/style.scss",
-              "src/styles.scss"
-
+              "src/styles.scss",
+              "node_modules/@fortawesome/fontawesome-free/css/all.css"
             ],
             "scripts": []
           },
