--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "@angular/platform-server": "^13.0.1",
     "@angular/router": "^13.0.1",
     "@auth0/angular-jwt": "^5.0.2",
-    "@fortawesome/angular-fontawesome": "^0.11.1",
+    "@fortawesome/angular-fontawesome": "github:fortawesome/angular-fontawesome",
+    "@fortawesome/fontawesome-free": "^6.2.1",
     "@fortawesome/fontawesome-svg-core": "^6.2.0",
     "@fortawesome/free-brands-svg-icons": "^6.2.0",
     "@fortawesome/free-regular-svg-icons": "^6.2.0",
