--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "chartjs-color": "^2.4.1",
     "font-awesome": "^4.7.0",
     "ng-apexcharts": "^1.5.6",
+    "ng-multiselect-dropdown": "^0.3.9",
     "ng2-charts": "^2.4.2",
     "ngx-perfect-scrollbar": "^9.0.0",
     "rxjs": "^6.6.3",
