--- a/package.json
+++ b/package.json
@@ -34,11 +34,13 @@
     "@ngx-translate/core": "^13.0.0",
     "@ngx-translate/http-loader": "^6.0.0",
     "@popperjs/core": "^2.11.0",
+    "@syncfusion/ej2-angular-dropdowns": "^20.4.43",
     "angular-feather": "^6.0.10",
     "angular-notifier": "^6.0.1",
     "apexcharts": "^3.25.0",
     "bootstrap": "^5.0.3",
     "bootstrap-icons": "^1.7.0",
+    "bootstrap-multiselect": "^1.1.0",
     "chart.js": "^2.8.0",
     "chartjs-color": "^2.4.1",
     "font-awesome": "^4.7.0",
