--- a/package.json
+++ b/package.json
@@ -44,9 +44,11 @@
     "chart.js": "^2.8.0",
     "chartjs-color": "^2.4.1",
     "font-awesome": "^4.7.0",
+    "mat-select-filter": "^2.4.1",
     "ng-apexcharts": "^1.5.6",
     "ng-multiselect-dropdown": "^0.3.9",
     "ng2-charts": "^2.4.2",
+    "ngx-mat-select-search": "^7.0.0",
     "ngx-perfect-scrollbar": "^9.0.0",
     "rxjs": "^6.6.3",
     "rxjs-compat": "^6.5.4",
